--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIS636WebDevPearson</title>
+    <title>Lauren Pearson's Website</title>
 </head>
 <body>
-
+    <h1>
+        Lauren's Academic Website
+    </h1>
 </body>
 </html>
